--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1,10 +1,35 @@
 /* Padding */
+
+.px-10{
+    padding: 0 10px;
+}
+
+.px-15{
+    padding: 0 15px;
+}
+
 .px-20{
     padding: 0 20px;
 }
 
 .pt-20{
     padding-top: 20px;
+}
+
+.pb-10{
+    padding-bottom: 10px;
+}
+
+.py-10{
+    padding: 10px 0;
+}
+
+.py-15{
+    padding: 15px 0;
+}
+
+.py-20{
+    padding: 20px 0;
 }
 
 
