new structure for problems encountered in old one

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* GENERAL */
 *{
     padding: 0;
     margin: 0;
@@ -5,7 +6,7 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .debug{
@@ -13,33 +14,50 @@ body{
     border: 1px solid #000;
 }
 
+.container-wrap{
+    height: 100vh;
+}
+
+main{
+    height: calc(100vh - 90px);
+}
+
+header{
+    height: 90px;
+    width: calc(100% - 250px);
+    text-align: right;
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+
+.main-nav{
+    width: 250px;
+    height: 100%;
+    flex-shrink: 0;
+}
+
+.content{
+    width: 100%;
+    height: calc(100vh - 90px);
+    overflow: auto;
+    padding-top: 90px;
+    background-color: beige;
+}
+
+.player{
+    height: 90px;
+}
+
 ul li{
     list-style: none;
 }
 
-.main-nav ul li{
-    padding-left: 5px;
+a{
+    text-decoration: none;
 }
 
-
-/* HEADER */
-header{
-    height: 80px;
-    background-color: rgba(38, 0, 255, 0.397);
-    text-align: right;
-    position: fixed;
-    width: calc(100% - 250px);
-    right: 0;
-    top: 0;
-    z-index: 99;
-}
-
-
-/* MAIN */
-main{
-    display: flex;
-}
-
+/* MAIN NAV */
 .logo img{
     width: 150px;
 }
@@ -47,16 +65,6 @@ main{
 .small-logo img{
     width: 30px;
     display: none;
-}
-
-/* INTERFACE MAIN NAV*/
-.main-nav{
-    width: 250px;
-    color: white;
-    height: calc(100vh - 80px);
-    /*debug*/
-    background-color: rgba(0, 85, 85, 0.292);
-    position: fixed;
 }
 
 .main-nav i{
@@ -67,70 +75,3 @@ main{
     height: calc(100vh - 350px);
     overflow: auto;
 }
-
-/* CONTAINER */
-.container {
-	width: calc(100% - 250px);
-	background-color: rgb(95, 250, 255);
-	position: fixed;
-	right: 0;
-	top: 80px;
-	height: calc(100vh - 160px);
-	overflow: auto;
-}
-
-/* PODCAST */
-#podcast{
-    width: 50%;
-    margin: 0 auto;
-}
-
-/* RECENTLY PLAYED */
-
-.card{
-    width: calc(100% / 5);
-}
-
-.card-image img{
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-}
-
-.card-text{
-    flex-direction: column;
-text-align: center;
-}
-
-/* RESPONSIVE */
-
-@media screen and (max-width: 600px){
-
-    .main-nav{
-        width: 80px;
-    }
-
-    .container{
-        min-width: calc(100% - 80px);
-    }
-
-    header{
-        width: calc(100% - 80px);
-    }
-
-    .logo{
-        display: none;
-    }
-    
-    .small-logo img{
-        display: block;
-    }
-    
-    .main-nav #playlists,
-    .main-nav span{
-        
-        display: none;
-    }
-}
-
-
