--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,3 +75,75 @@ a{
     height: calc(100vh - 350px);
     overflow: auto;
 }
+
+/* PODCAST */
+#podcast{
+    width: 30%;
+    margin: 0 auto;
+}
+
+/* RECENTLY PLAYED */
+.card{
+    width: 200px;
+}
+
+.card-image img{
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.card-text{
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+}
+
+
+
+
+
+/* RESPONSIVE */
+
+/* @media screen and (max-width: 1100px){
+    .card{
+        width: calc(100% / 4);
+    }
+}
+
+@media screen and (max-width: 700){
+    .card{
+        width: calc(100% / 2);
+    }
+} */
+
+
+
+@media screen and (max-width: 600px){
+
+    .main-nav{
+        width: 80px;
+    }
+
+    .container{
+        min-width: calc(100% - 80px);
+    }
+
+    header{
+        width: calc(100% - 80px);
+    }
+
+    .logo{
+        display: none;
+    }
+    
+    .small-logo img{
+        display: block;
+    }
+    
+    .main-nav .personal,
+    .main-nav a{
+        
+        display: none;
+    }
+}
