--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,40 +82,47 @@ a{
     margin: 0 auto;
 }
 
+
 /* RECENTLY PLAYED */
 .card{
-    width: 200px;
+    width: calc(100% / 6);
 }
 
 .card-image img{
-    width: 150px;
-    height: 150px;
+    width: 100%;
     object-fit: cover;
 }
 
 .card-text{
     flex-direction: column;
     align-items: center;
-    width: 90%;
+    width: 100%;
 }
 
+/* CREATED FOR JOHN DOE */
 
+/* MOST POPULAR ARTISTS */
+.card-image.round-image img{
+    border-radius: 50%;
+}
 
 
 
 /* RESPONSIVE */
 
-/* @media screen and (max-width: 1100px){
+@media screen and (max-width:1100px) {
+   
+
     .card{
         width: calc(100% / 4);
     }
 }
 
-@media screen and (max-width: 700){
+@media screen and (max-width:752px) {
     .card{
         width: calc(100% / 2);
     }
-} */
+}
 
 
 
