--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -32,6 +32,18 @@
     padding-bottom: 10px;
 }
 
+.pb-20{
+    padding-bottom: 20px;
+}
+
+.pb-30{
+    padding-bottom: 30px;
+}
+
+.pl-20{
+    padding-left: 20px;
+}
+
 .pr-10{
     padding-right: 10px;
 }
