--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ a{
 }
 
 #playlists{
-    height: calc(100vh - 350px);
+    height: calc(100vh - 430px);
     overflow: auto;
 }
 
@@ -101,13 +101,63 @@ a{
 
 /* CREATED FOR JOHN DOE */
 
+
+
 /* MOST POPULAR ARTISTS */
 .card-image.round-image img{
     border-radius: 50%;
 }
 
+/* PLAYER */
+#song{
+    width: 25%;
+}
 
+#reproduce{
+    width: 50%;
+}
 
+#settings{
+    width: 25%;
+}
+
+/* Song */
+
+.mini-card .image img{
+    width: 50px;
+    height: 50px;
+}
+
+/* Reproduce */
+#controls{
+    flex-direction: column;
+}
+.line{
+    background-color: black;
+    border-radius: 5px;
+    width: 50%;
+    height: 3px;
+}
+
+.grey-line{
+    border:2px solid lightgray;
+    background-color: lightgray;
+    border-radius: 5px;
+    width: 10%;
+}
+
+/* Settings */
+#settings > div{
+    justify-content: flex-end;
+}
+
+#settings .line{
+    width: 30%;
+}
+
+#settings .grey-line{
+    width: 30%;
+}
 /* RESPONSIVE */
 
 @media screen and (max-width:1100px) {
