--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,12 +29,14 @@ header{
     position: fixed;
     top: 0;
     right: 0;
+    background-color: #080b12ea;
 }
 
 .main-nav{
     width: 250px;
     height: 100%;
     flex-shrink: 0;
+    color: white;
 }
 
 .content{
@@ -57,7 +59,31 @@ a{
     text-decoration: none;
 }
 
+/* HEADER */
+header button{
+    border: 1px solid white;
+    font-size: 12px;
+    border-radius: 20px;
+    color: white;
+    padding: 15px 30px;
+    margin-right: 15px;
+    background-color: #080b12ea;
+    cursor: pointer;
+}
+
+header button:hover{
+    text-decoration: underline;
+    
+}
+
 /* MAIN NAV */
+.main-nav{
+    background-color: #000000;
+}
+.main-nav i {
+    vertical-align: middle;
+}
+
 .logo img{
     width: 150px;
 }
@@ -71,9 +97,17 @@ a{
     font-size:25px;
 }
 
+.main-nav a{
+    color: white;
+}
+
 #playlists{
-    height: calc(100vh - 430px);
+    height: calc(100vh - 450px);
     overflow: auto;
+}
+
+.new-playlist i{
+    font-size: 45px;
 }
 
 /* PODCAST */
