--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
 }
 
 .debug{
@@ -36,7 +37,6 @@ header{
     width: 250px;
     height: 100%;
     flex-shrink: 0;
-    color: white;
 }
 
 .content{
@@ -45,13 +45,11 @@ header{
     overflow: auto;
     padding-top: 90px;
     background-color: #141922;
-    color:white;
 }
 
 .player{
     height: 90px;
     background-color: #282828;
-    color: white;
 }
 
 ul li{
@@ -62,12 +60,24 @@ a{
     text-decoration: none;
 }
 
+.main-nav,
+.content,
+.player,
+header button,
+.new-playlist h3,
+.user a span,
+.track-title,
+#song a{
+    color: white;
+}
+
+
+
 /* HEADER */
 header button{
     border: 1px solid white;
     font-size: 12px;
     border-radius: 20px;
-    color: white;
     padding: 15px 30px;
     margin-right: 15px;
     background-color: #080b12ea;
@@ -83,13 +93,15 @@ header button:hover{
 .main-nav{
     background-color: #000000;
     font-weight: bold;
+    color:#A3A3A3;
 }
 .main-nav i {
     vertical-align: middle;
 }
 
+.main-nav ul li a,
 .main-nav ul li a span{
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .logo img{
@@ -107,12 +119,14 @@ header button:hover{
     vertical-align: middle;
 }
 
-.main-nav a{
-    color: white;
+.main-nav a,
+.title-song #author,
+.icons-song{
+    color: #A3A3A3;
 }
 
 #playlists{
-    height: calc(100vh - 510px);
+    height: calc(100vh - 480px);
     overflow: auto;
 }
 
@@ -176,15 +190,6 @@ header button:hover{
     text-align: center;
 }
 
-.track-title,
-.artist{
-    font-weight: bold;
-}
-
-.track-title{
-    color:white;
-}
-
 .artist{
     font-size: 12px;
     color: #72757A;
@@ -192,9 +197,6 @@ header button:hover{
 
 /* CREATED FOR JOHN DOE */
 
-#create-for p{
-    font-weight: bold;
-}
 
 /* MOST POPULAR ARTISTS */
 .card-image.round-image img{
@@ -222,24 +224,45 @@ header button:hover{
 }
 
 #song a{
-    color:white;
     font-size: 13px;
+}
+
+#song #author,
+.time span,
+.settings-icons{
+    font-size: 12px;
 }
 
 /* Reproduce */
 #controls{
     flex-direction: column;
 }
+
+.play i{
+    font-size: 18px;
+}
+
+#stop{
+    font-size: 35px;
+}
+
 .line{
-    background-color: black;
+    background-color:#5A5A5A;
     border-radius: 5px;
     width: 50%;
     height: 3px;
 }
 
+
+
+.time span,
+.settings-icons{
+    color:#C1C1C1;
+}
+
 .grey-line{
-    border:2px solid lightgray;
-    background-color: lightgray;
+    border:2px solid #C1C1C1;
+    background-color: #C1C1C1;
     border-radius: 5px;
     width: 10%;
 }
@@ -308,6 +331,11 @@ header button:hover{
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+    }
+
+    .download img{
+        position: relative;
+        left: 4px;
     }
 
     .download{
