--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ body{
 
 main{
     height: calc(100vh - 90px);
+    overflow: hidden;
 }
 
 header{
@@ -60,6 +61,19 @@ a{
     text-decoration: none;
 }
 
+.selected{
+    border-left: 3px solid #ADFF2F;
+    margin-left: -15px;
+    padding-left: 12px;
+}
+
+.active{
+    border-bottom: 2px solid #ADFF2F;
+    width: 30%;
+    margin: 0 auto;
+}
+
+
 .main-nav,
 .content,
 .player,
@@ -71,6 +85,20 @@ header button,
     color: white;
 }
 
+
+header button:hover,
+#stop:hover{
+    transform: scale(1.1);
+}
+
+.main-nav li a:hover,
+.main-nav .download a:hover,
+.main-nav .user a:hover,
+#podcast ul li a:hover,
+.player #song .title-song a#author:hover,
+.player #song .icons-song i:hover{
+    color: white;
+}
 
 
 /* HEADER */
@@ -84,17 +112,13 @@ header button{
     cursor: pointer;
 }
 
-header button:hover{
-    text-decoration: underline;
-    
-}
-
 /* MAIN NAV */
 .main-nav{
     background-color: #000000;
     font-weight: bold;
     color:#A3A3A3;
 }
+
 .main-nav i {
     vertical-align: middle;
 }
@@ -146,7 +170,7 @@ header button:hover{
 }
 
 .download a,
-.user a,
+.user span,
 #create-for p{
     font-size: 12px;
     color: #707070;
@@ -156,7 +180,6 @@ header button:hover{
     background-color:  #707070;
     border-radius: 50%;
 }
-
 
 /* PODCAST */
 #podcast{
@@ -175,9 +198,36 @@ header button:hover{
     width: calc(100% / 6);
 }
 
+.card-image{
+    position: relative;
+    cursor: pointer;
+}
+
 .card-image img{
     width: 100%;
     object-fit: cover;
+}
+
+.card-image .overlay{
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top:0;
+    left: 0;
+}
+
+.overlay i{
+    font-size: 50px;
+    
+}
+
+.card-image .overlay{
+    display: none;
+}
+
+.card-image:hover .overlay{
+    display: flex;
 }
 
 .card-text{
@@ -199,7 +249,8 @@ header button:hover{
 
 
 /* MOST POPULAR ARTISTS */
-.card-image.round-image img{
+.card-image.round-image img,
+.overlay.round{
     border-radius: 50%;
 }
 
@@ -214,6 +265,11 @@ header button:hover{
 
 #settings{
     width: 25%;
+}
+
+.player i,
+.line{
+    cursor: pointer;
 }
 
 /* Song */
@@ -231,6 +287,10 @@ header button:hover{
 .time span,
 .settings-icons{
     font-size: 12px;
+}
+
+#author:hover{
+    text-decoration: underline;
 }
 
 /* Reproduce */
@@ -253,7 +313,10 @@ header button:hover{
     height: 3px;
 }
 
-
+.line i{
+    font-size: 14px;
+    display: none;
+}
 
 .time span,
 .settings-icons{
@@ -265,6 +328,15 @@ header button:hover{
     background-color: #C1C1C1;
     border-radius: 5px;
     width: 10%;
+}
+
+.line:hover .grey-line{
+    border: 2px solid #ADFF2F;
+    background-color: #ADFF2F;
+}
+
+.line:hover i{
+    display: flex;
 }
 
 /* Settings */
