--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -61,8 +61,16 @@
 }
 
 /* Margin */
+.mt-10{
+    margin-top: 10px;
+}
+
 .mt-20{
     margin-top: 20px;
+}
+
+.mb-10{
+    margin-bottom: 10px;
 }
 
 .mr-10{
